# optimal-uber

./: CMakeLists.txt  README.md  check.cpp  input.txt  route_data.json  route_data_refuel.json
src/: cli.cpp  cli.h  dijkstra.cpp  dijkstra.h  fuel_manager.h  graph.cpp  graph.h  input_validator.h  json_exporter.cpp  json_exporter.h  main.cpp  pareto.h  state.h  tests.cpp  tests.h  tradeoff_analyzer.cpp  tradeoff_analyzer.h
